# dizzy-kwik-snax-redux

./: .clang-format  .coderabbit.yaml  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: code_quality_check.yaml  code_style_check.yaml  pr_author_auto_assign.yaml  pull_request.yaml
cmake/: FindDevkitPro.cmake
docs/awesome_css/: header.html
docs/design_document/: 00-vision.md  00-vision.ru.md  00_vision.md  00_vision.ru.md  01_core_loop.md  01_core_loop.ru.md  02_design_pillars.md  02_design_pillars.ru.md  03_gameplay.md  03_gameplay.ru.md  04_controls.md  04_controls.ru.md  05_levels.md  05_levels.ru.md  06_art.md  06_art.ru.md  07_audio.md  07_audio.ru.md  08_ux.md  08_ux.ru.md  09_tech.md  09_tech.ru.md  10_lore.md  10_lore.ru.md  README.md
game/: game.cpp
tools/builder/: check_code_format.sh
